v0.0.1/modules/schema/pages/class/PeriodicStatisticalCalculation.adoc
= `PeriodicStatisticalCalculation`
:toclevels: 4


+++Description of period for which calculation is performed.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PeriodicStatisticalCalculation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]
*** *`PeriodicStatisticalCalculation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PeriodicStatisticalCalculation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CalculationMethodOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




PeriodicStatisticalCalculation -> CalculationMethodOrder: CalculationMethodOrder


PeriodicStatisticalCalculation -> DiagramObject: DiagramObjects


PeriodicStatisticalCalculation -> InstanceSet: InstanceSet


PeriodicStatisticalCalculation -> Name: Names


PeriodicStatisticalCalculation -> ChangeSetMember: PropertiesCIMDataObject


PeriodicStatisticalCalculation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<calculationIntervalMagnitude,`calculationIntervalMagnitude`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of units (of calculationIntervalUnit) in the calculation interval.+++

| <<calculationIntervalUnit,`calculationIntervalUnit`>>
| 0..1
| xref::enumeration/CalculationIntervalUnitKind.adoc[`CalculationIntervalUnitKind`]
| +++Unit in which calculation interval is defined.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<calculationMode,`calculationMode`>>
| 0..1
| xref::enumeration/CalculationModeKind.adoc[`CalculationModeKind`]
| +++Calculation mode.+++

| <<calculationTechnique,`calculationTechnique`>>
| 0..1
| xref::enumeration/CalculationTechniqueKind.adoc[`CalculationTechniqueKind`]
| +++Kind of statistical calculation, specifying how the measurement value is calculated.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<CalculationMethodOrder,`CalculationMethodOrder`>>
| 0..*
| xref::class/CalculationMethodOrder.adoc[`CalculationMethodOrder`]
| +++The order in which this statistical calculation is done.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#calculationIntervalMagnitude]
=== `calculationIntervalMagnitude`
+++Number of units (of calculationIntervalUnit) in the calculation interval.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PeriodicStatisticalCalculation.calculationIntervalMagnitude`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#calculationIntervalUnit]
=== `calculationIntervalUnit`
+++Unit in which calculation interval is defined.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PeriodicStatisticalCalculation.calculationIntervalUnit`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationIntervalUnitKind.adoc[`CalculationIntervalUnitKind`]


|===

//[discrete]
[#CalculationMethodOrder]
=== `CalculationMethodOrder`
+++The order in which this statistical calculation is done.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.CalculationMethodOrder`
| Cardinality
| 0..*
| Type
| xref::class/CalculationMethodOrder.adoc[`CalculationMethodOrder`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

//[discrete]
[#calculationMode]
=== `calculationMode`
+++Calculation mode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.calculationMode`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationModeKind.adoc[`CalculationModeKind`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

//[discrete]
[#calculationTechnique]
=== `calculationTechnique`
+++Kind of statistical calculation, specifying how the measurement value is calculated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.calculationTechnique`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationTechniqueKind.adoc[`CalculationTechniqueKind`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


