v1.1.0/modules/schema/pages/class/PeriodicStatisticalCalculation.adoc
= `PeriodicStatisticalCalculation`
:toclevels: 4


+++Description of period for which calculation is performed.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PeriodicStatisticalCalculation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]
*** *`PeriodicStatisticalCalculation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<calculationIntervalMagnitude,`calculationIntervalMagnitude`>>
//| [[slots_table.calculationIntervalMagnitude]]<<calculationIntervalMagnitude,`calculationIntervalMagnitude`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of units (of calculationIntervalUnit) in the calculation interval.+++
| _n/a_

| <<calculationIntervalUnit,`calculationIntervalUnit`>>
//| [[slots_table.calculationIntervalUnit]]<<calculationIntervalUnit,`calculationIntervalUnit`>>
| 0..1 +
xref::enumeration/CalculationIntervalUnitKind.adoc[`CalculationIntervalUnitKind`]
| +++Unit in which calculation interval is defined.+++
| _n/a_

| <<CalculationMethodOrder,`CalculationMethodOrder`>>
//| [[slots_table.CalculationMethodOrder]]<<CalculationMethodOrder,`CalculationMethodOrder`>>
| 0..* +
xref::class/CalculationMethodOrder.adoc[`CalculationMethodOrder`]
| +++The order in which this statistical calculation is done.+++
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]

| <<calculationMode,`calculationMode`>>
//| [[slots_table.calculationMode]]<<calculationMode,`calculationMode`>>
| 0..1 +
xref::enumeration/CalculationModeKind.adoc[`CalculationModeKind`]
| +++Calculation mode.+++
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]

| <<calculationTechnique,`calculationTechnique`>>
//| [[slots_table.calculationTechnique]]<<calculationTechnique,`calculationTechnique`>>
| 0..1 +
xref::enumeration/CalculationTechniqueKind.adoc[`CalculationTechniqueKind`]
| +++Kind of statistical calculation, specifying how the measurement value is calculated.+++
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#calculationIntervalMagnitude]
=== `calculationIntervalMagnitude`
+++Number of units (of calculationIntervalUnit) in the calculation interval.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PeriodicStatisticalCalculation.calculationIntervalMagnitude`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.calculationIntervalMagnitude,&#10548;>>
--
////


//[discrete]
[#calculationIntervalUnit]
=== `calculationIntervalUnit`
+++Unit in which calculation interval is defined.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PeriodicStatisticalCalculation.calculationIntervalUnit`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationIntervalUnitKind.adoc[`CalculationIntervalUnitKind`]


|===

////
[.text-left]
--
<<slots_table.calculationIntervalUnit,&#10548;>>
--
////


//[discrete]
[#CalculationMethodOrder]
=== `CalculationMethodOrder`
+++The order in which this statistical calculation is done.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.CalculationMethodOrder`
| Cardinality
| 0..*
| Type
| xref::class/CalculationMethodOrder.adoc[`CalculationMethodOrder`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

////
[.text-left]
--
<<slots_table.CalculationMethodOrder,&#10548;>>
--
////


//[discrete]
[#calculationMode]
=== `calculationMode`
+++Calculation mode.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.calculationMode`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationModeKind.adoc[`CalculationModeKind`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

////
[.text-left]
--
<<slots_table.calculationMode,&#10548;>>
--
////


//[discrete]
[#calculationTechnique]
=== `calculationTechnique`
+++Kind of statistical calculation, specifying how the measurement value is calculated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StatisticalCalculation.calculationTechnique`
| Cardinality
| 0..1
| Type
| xref::enumeration/CalculationTechniqueKind.adoc[`CalculationTechniqueKind`]

| Inherited from
| xref::class/StatisticalCalculation.adoc[`StatisticalCalculation`]


|===

////
[.text-left]
--
<<slots_table.calculationTechnique,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
